# audio-wake-up

./: CMakeLists.txt  README.md  main.cpp  trans2mfcc.cpp
audio/: alsa_record.cpp  alsa_record.hpp  getch.cpp
data_process/: data.cpp
mfcc/: mfcc.cpp  wavHeader.h
player/: player.cpp
